# 6502-dev-environment

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json
6502-frontend/: index.html
6502-frontend/public/: my_wasm_project.js  my_wasm_project.wasm
6502-frontend/src/: App.css  App.tsx  useWasm.ts
6502-frontend/src/Components/Editor/: Editor.css  Editor.tsx
6502-frontend/src/Components/RegisterView/: RegisterView.css  RegisterView.tsx
6502-frontend/src/Components/StackView/: StackView.css  StackView.tsx
6502-frontend/src/Components/Trace/: Trace.css  Trace.tsx
6502-frontend/src/Interfaces/: AssemblyStateInterfaces.ts
public/: my_wasm_project.js  my_wasm_project.wasm
src/: App.css  App.tsx  cpu.test.js  index.css  mos6502-mode.js  mos6502-mode.ts  useWasm.ts
src/Components/Editor/: Editor.css  Editor.tsx
src/Components/EmulatorControls/: EmulatorControls.css  EmulatorControls.tsx
src/Components/Flag/: Flag.tsx
src/Components/MemoryView/: MemoryView.css  MemoryView.tsx
src/Components/Register/: Register.css  Register.tsx
src/Components/RegisterView/: RegisterView.css  RegisterView.tsx
src/Components/Spinner/: Spinner.css  Spinner.tsx
src/Components/StackView/: StackView.css  StackView.tsx
src/Components/Trace/: Trace.css  Trace.tsx
src/Interfaces/: AssemblyStateInterfaces.ts
wasm/: Bindings.cpp  Bus.cpp  Bus.h  CMakeLists.txt  Cpu.cpp  Cpu.h
